# gemini-faf-mcp

./: .dockerignore  .gitignore  .taf  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CORE-SCORING-SPEC.md  Dockerfile  FAQ.md  GEMINI.md  GITHUB-RELEASE-CHANGELOG.md  LICENSE  README.md  cloudbuild.yaml  gemini-extension.json  gemini-live-tools.json  inject.py  main.py  models.py  openapi.yaml  project.faf  pyproject.toml  requirements.txt  run.sh  safe_path.py  server.json  server.py  sync_faf.py
.gemini/: context.yaml  project.faf
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  faf-sync.yml  publish-mcp-registry.yml  pypi.yml  testpypi.yml
commands/faf/: export.toml  setup.toml
commands/gemini-faf-mcp/: score.toml  setup.toml
docs/: SETUP.md  SYS-REQS.md  index.html
hooks/: pre-commit
src/gemini_faf_mcp/: __init__.py  client.py
tests/: WJTTC-TEST-SUITE.md  test_dart_detection.py  test_fastmcp_server.py  test_gemini_faf_mcp.py  test_security_path_confinement.py  test_wjttc_mk4.py  test_write_guard.py
